--- a/BrownianMotion/brownian.html
+++ b/BrownianMotion/brownian.html
@@ -8,14 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 
-
     <title>Brownian Motion SImulation</title>
   </head>
   <body>
     <main>
         <div class="container my-5">
             <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
-                <h1 class="display-5 fw-bold text-body-emphasis">Brownian Motion SImulation</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis">Brownian Motion Simulation</h1>
                 <div class="col-lg-6 mx-auto">
                   <p class="lead fw-bold">Fizyczna symulacja ruchów Browna oraz Cyklu Wienera</p>
                 </div>
@@ -87,7 +86,6 @@
               </div>
             </div>
         </div>
-
     </main>
   </body>
 </html>
