Add CEC2020 Algorithms page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <h1 class="display-5 fw-bold text-body-emphasis">Projects</h1>
                 <a href="BrownianMotion/brownian.html">Brownian Motion</a>
                 <a href="EducationApp/eduapp.html">Education App</a>
+                <a href="CEC2020Comparision/cec2020.html">CEC2020 Comparision</a>
               </div>
         </div>
     </main>
