--- a/EnglishPorches/gallery.html
+++ b/EnglishPorches/gallery.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container text-center">
             <div class="row">
-                <a class="d-none d-sm-block col-sm-4 col-lg-3 my-sm-4 my-md-auto" href="index.html">
+                <a class="d-none d-sm-block col-sm-4 col-lg-3 my-sm-4 my-md-auto" href="index2.html">
                     <img src="img/logo.png" class="img-fluid d-block mx-auto">
                 </a>
     
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="mainmenu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"> Main </a>
+                        <a class="nav-link" href="index2.html"> Main </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="gallery.html"> Gallery </a>
