--- a/EnglishPorches/gallery.html
+++ b/EnglishPorches/gallery.html
@@ -57,7 +57,7 @@
         <div class="card bg-dark">
             <img src="img/header.jpg" class="card-img rounded-0" alt="...">
             <div class="card-img-overlay">
-                <h1 class="h1 text-white fw-bold img-middle">About Us</h1>
+                <h1 class="h1 text-white fw-bold img-middle">Gallery</h1>
             </div>
         </div>
         
