Add lazy loading

--- a/Tulip/index-pl.html
+++ b/Tulip/index-pl.html
@@ -72,11 +72,11 @@
             <div id="description" class="container mb-2">
                 <h2 class="pt-3 pb-1 shadows-into-light-regular">Opis</h2>
                 <div class="row bg-blue-light p-md-4 p-3 g-2">
-                    <div class="col-md-8">
+                    <div class="col-md-8 image-wrapper">
                         <img src="img/tulip2.jpg" alt="Large Image" class="large-image">
                     </div>
                     <div class="col-md-4">
-                        <div class="img-container">
+                        <div class="img-container image-wrapper">
                             <img src="img/tulip3.jpg" alt="Small Image 1" class="small-image">
                             <img src="img/tulip5.jpg" alt="Small Image 2" class="small-image">
                         </div>
@@ -153,10 +153,10 @@
             <div id="meals" class="container my-2">
                 <h2 class="shadows-into-light-regular">Bufet śniadaniowy</h2>
                 <div class="row p-md-4 p-3">
-                    <div class="col-md-6 px-md-5">
+                    <div class="col-md-6 px-md-5 image-wrapper">
                         <img src="img/buffet1.jpg" alt="hotel" class="img-fluid">
                     </div>
-                    <div class="col-md-6 px-md-5">
+                    <div class="col-md-6 px-md-5 image-wrapper">
                         <img src="img/buffet2.jpg" alt="hotel" class="img-fluid">
                     </div>
                 </div>
@@ -167,7 +167,7 @@
             <div id="restaurant" class="container my-2">
                 <h2 class="shadows-into-light-regular">Restaurancja</h2>
                 <div class="row p-md-4 p-3">
-                    <div class="col-lg-8 offset-lg-2">
+                    <div class="col-lg-8 offset-lg-2 image-wrapper">
                         <img src="img/restaurant.jpg" alt="hotel" class="img-fluid">
                     </div>
                 </div>
@@ -211,7 +211,7 @@
             <div id="beach" class="container my-2">
                 <h2 class="shadows-into-light-regular">Plaża</h2>
                 <div class="row bg-blue-light p-md-4 p-3">
-                    <div class="col-md-6 offset-md-3">
+                    <div class="col-md-6 offset-md-3 image-wrapper">
                         <img src="img/beach.jpg" alt="hotel" class="img-fluid">
                     </div>
                 </div>
