Add fade-in sections

--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -69,14 +69,14 @@
 
     <main>
         <section>
-            <div id="description" class="container mb-2">
+            <div id="description" class="container mb-2 image-wrapper">
                 <h2 class="pt-3 pb-1 shadows-into-light-regular">Beschreibung</h2>
                 <div class="row bg-blue-light p-md-4 p-3 g-2">
-                    <div class="col-md-8 image-wrapper">
+                    <div class="col-md-8">
                         <img src="img/tulip2.jpg" alt="Large Image" class="large-image">
                     </div>
                     <div class="col-md-4">
-                        <div class="img-container image-wrapper">
+                        <div class="img-container">
                             <img src="img/tulip3.jpg" alt="Small Image 1" class="small-image">
                             <img src="img/tulip5.jpg" alt="Small Image 2" class="small-image">
                         </div>
@@ -117,7 +117,7 @@
         </section>
 
         <section>
-            <div id="rooms" class="container my-2">
+            <div id="rooms" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Zimmer</h2>
                 <div class="row bg-body p-md-4 p-3">
                     <div class="col-lg-8 offset-lg-2">
@@ -150,13 +150,13 @@
         </section>
 
         <section>
-            <div id="meals" class="container my-2">
+            <div id="meals" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Frühstücksbüfett</h2>
                 <div class="row p-md-4 p-3">
-                    <div class="col-md-6 px-md-5 image-wrapper">
+                    <div class="col-md-6 px-md-5">
                         <img src="img/buffet1.jpg" alt="hotel" class="img-fluid" loading="lazy">
                     </div>
-                    <div class="col-md-6 px-md-5 image-wrapper">
+                    <div class="col-md-6 px-md-5">
                         <img src="img/buffet2.jpg" alt="hotel" class="img-fluid" loading="lazy">
                     </div>
                 </div>
@@ -164,10 +164,10 @@
         </section>
 
         <section>
-            <div id="restaurant" class="container my-2">
+            <div id="restaurant" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Restaurant</h2>
                 <div class="row p-md-4 p-3">
-                    <div class="col-lg-8 offset-lg-2 image-wrapper">
+                    <div class="col-lg-8 offset-lg-2">
                         <img src="img/restaurant.jpg" alt="hotel" class="img-fluid">
                     </div>
                 </div>
@@ -175,7 +175,7 @@
         </section>
 
         <section>
-            <div id="wellness" class="container my-2">
+            <div id="wellness" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Wellness</h2>
                 <div class="row bg-blue-light p-md-4 p-3">
                     <div class="col-lg-8 offset-lg-2">
@@ -208,10 +208,10 @@
         </section>
 
         <section>
-            <div id="beach" class="container my-2">
+            <div id="beach" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Strand</h2>
                 <div class="row bg-blue-light p-md-4 p-3">
-                    <div class="col-md-6 offset-md-3 image-wrapper">
+                    <div class="col-md-6 offset-md-3">
                         <img src="img/beach.jpg" alt="hotel" class="img-fluid">
                     </div>
                 </div>
@@ -219,7 +219,7 @@
         </section>
 
         <section>
-            <div id="location" class="container my-2">
+            <div id="location" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Lage</h2>
                 <div class="row bg-body p-md-4 p-3">
                     <div class="col-md-6">
@@ -243,7 +243,7 @@
         </section>
 
         <section>
-            <div id="contact" class="container my-2">
+            <div id="contact" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Kontakt</h2>
                 <div class="row bg-blue-light p-md-4 p-3">
                     <div class="col-12 col-lg-4 mb-3 mb-lg-0">
@@ -282,7 +282,7 @@
         </section>
 
         <section>
-            <div id="policy" class="container my-2">
+            <div id="policy" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Impressum</h2>
                 <div class="row bg-body p-md-4 p-3">
                     <div class="col-lg-6">
