--- a/Tulip/index-pl.html
+++ b/Tulip/index-pl.html
@@ -495,6 +495,23 @@
         }
 
         window.addEventListener('scroll', onScroll);
+
+
+          // IntersectionObserver dla animacji fade-in
+        const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+            observer.unobserve(entry.target);
+            }
+        });
+        }, {
+        threshold: 0.1
+        });
+
+        document.querySelectorAll('.image-wrapper').forEach(el => {
+        observer.observe(el);
+        });
     </script>
 
     <script src="js/slider.js"></script>
