--- a/Tulip/index-pl.html
+++ b/Tulip/index-pl.html
@@ -230,7 +230,7 @@
                     </div>
                     <div class="col-md-6 p-xl-5">
                         <h3>Golden Tulip Międzyzdroje Residence</h3>
-                        <strong>Adresse:</strong>
+                        <strong>Adres:</strong>
                         <p class="my-0">ul. Gryfa Pomorskiego 79</p>
                         <p>72-500 Międzyzdroje, Polska</p>
                         <ul>
@@ -250,9 +250,9 @@
                         <div class="col-12 bg-blue-subtle info px-4">
                             <h3 class="mt-3 mt-xxl-5">Syld Haria</h3>
                             <p>W razie pytań prosimy o wiadomość na poniższy adres mailowy lub poprzez formularz kontaktowy</p>
-                            <strong>E-Mail-Adresse:</strong>
+                            <strong>EAdres e-mail:</strong>
                             <p class="pt-1 contact-p">ostseeurlaub-syld-haria-apartments@gmx.net</p>
-                            <strong>Telefonnummer:</strong>
+                            <strong>Telefon::</strong>
                             <p class="pt-1 pb-0 contact-p">+49 36927 91827</p>
                             <p class="pt-0 contact-p">+49 36927 90644</p>
                             <strong>Mobil:</strong>
@@ -423,7 +423,7 @@
                                 <p class="mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+49 36927 90644</p>
                             </li>
                             <li>Mobil: +48 797 837 591</li>
-                            <li>E-Mail-Adresse: ostseeurlaub-syld-haria-apartments@gmx.net</li>
+                            <li>Adres e-mail: ostseeurlaub-syld-haria-apartments@gmx.net</li>
                         </ul>
                     </div>
 
