--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 info wellness offset-lg-1">
+                    <div class="col-lg-3 info wellness p-2">
                         <p>Die komfortablen Apartments sind ca. 45 qm bis 65 qm groß, ausgestattet mit separatem Schlafzimmer, Wohnbereich mit Balkon, Bad, Küchenzeile, Schlafcouch, TV einschließlich WLAN. Zustellbett möglich, alle Etagen sind mit Lift erreichbar. </p>
                     </div>
                 </div>
@@ -143,11 +143,14 @@
             <div id="meals" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Frühstücksbüfett</h2>
                 <div class="row bg-blue-light p-md-4 p-3">
-                    <div class="col-md-6 px-md-5">
+                    <div class="col-md-4 gx-1">
                         <img src="img/buffet1.jpg" alt="hotel" class="img-fluid">
                     </div>
-                    <div class="col-md-6 px-md-5">
-                        <img src="img/buffet2.jpg" alt="hotel" class="img-fluid">
+                    <div class="col-md-4 gx-1">
+                        <img src="img/buffet3.jpeg" alt="hotel" class="img-fluid">
+                    </div>
+                    <div class="col-md-4 gx-1">
+                        <img src="img/buffet4.jpeg" alt="hotel" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -156,7 +159,7 @@
         <section>
             <div id="restaurant" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Restaurant</h2>
-                <div class="row bg-body p-md-4 p-3">
+                <div class="row bg-yellow-light p-md-4 p-3">
                     <div class="col-lg-8 offset-lg-2">
                         <img src="img/restaurant.jpg" alt="hotel" class="img-fluid">
                     </div>
@@ -167,7 +170,7 @@
         <section>
             <div id="wellness" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Wellness</h2>
-                <div class="row bg-blue-light p-md-4 p-3">
+                <div class="row bg-blue-light p-md-4 p-3 align-items-center">
                     <div class="col-lg-8 offset-lg-1">
                         <div id="slider2" class="slider">
                             <div class="slider-wrapper">
@@ -207,17 +210,12 @@
         <section>
             <div id="beach" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Strand</h2>
-                <div class="bg-body">
-                    <div class="col-md-7">
-                        <img src="img/beach.jpg" alt="hotel" class="img-fluid">
-                    </div>
-
-                    <div class="col-md-5">
+                <div class="bg-yellow-light">
+                    <div class="col-md-8 offset-md-2">
                         <div id="slider3" class="slider">
                             <div class="slider-wrapper">
-                                <div class="slide"><img src="img/beach1.jpeg" alt="Slide 1"></div>
-                                <div class="slide"><img src="img/beach2.jpeg" alt="Slide 2"></div>
-                                <div class="slide"><img src="img/beach3.jpeg" alt="Slide 3"></div>
+                                <div class="slide"><img src="img/beach.jpg" alt="Slide 1"></div>
+                                <div class="slide"><img src="img/beach4.jpg" alt="Slide 2"></div>
                             </div>
                             <div class="slider-controls">
                                 <button class="prevBtn">&#10094;</button>
@@ -226,7 +224,6 @@
                             <div class="slider-dots">
                                 <div class="dot" onclick="slider1.currentSlide(1)"></div>
                                 <div class="dot" onclick="slider1.currentSlide(2)"></div>
-                                <div class="dot" onclick="slider1.currentSlide(3)"></div>
                             </div>
                         </div>
                     </div>
@@ -261,7 +258,7 @@
         <section>
             <div id="contact" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Kontakt</h2>
-                <div class="row bg-body p-md-4 p-3">
+                <div class="row bg-yellow-light p-md-4 p-3">
                     <div class="col-12 col-lg-4 mb-3 mb-lg-0">
                         <div class="col-12 bg-blue-subtle info px-4">
                             <h3 class="mt-3 mt-xxl-5"><strong>Syld Haria</strong></h3>
@@ -318,8 +315,14 @@
                             </li>
                             <li>Mobil: +48 797 837 591</li>
                             <li>
-                                <p class="mb-0">E-Mail-Adresse: ostseeurlaub-syld-haria-apartments@gmx.net</p>
-                                <p class="mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;info-hs-baltictour@web.de</p>
+                                <p class="mb-0">
+                                    <span class="label">E-Mail-Adresse:</span>
+                                    <a href="mailto:ostseeurlaub-syld-haria-apartments@gmx.net">ostseeurlaub-syld-haria-apartments@gmx.net</a>
+                                </p>
+                                <p class="mb-0">
+                                    <span class="label invisible-label">E-Mail-Adresse:</span>
+                                    <a href="mailto:info-hs-baltictour@web.de">info-hs-baltictour@web.de</a>
+                                </p>
                             </li>
                         </ul>
                     </div>
