--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -72,7 +72,7 @@
                     <div class="col-lg-8">
                         <img src="img/tulip2.jpg" alt="Large Image" class="large-image">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 p-lg-2">
                         <p>Die Hotelanlage liegt ca. 5 Minuten Fußweg vom Strand entfernt. Ferienwohnung und Studios bieten unseren Gästen genau den Komfort, den Sie für Ihren Aufenthalt wünschen. Die großzügigen Wohnbereiche mit separatem Schlafzimmer, Küchenzeile, Bad, einschließlich Balkon.</p>
 
                         <p>Im Restaurant können Sie mit einem perfekt angerichteten Frühstücksbuffet in den Tag starten und abends sich mit leckeren Speisen verwöhnen lassen. Für Entspannung bietet das Spa moderne Behandlungsräume für Beautyanwendungen und Massagen, Dampf- und Trockensauna, ein Schwimmbad mit Whirlpool und Fitnessraum. Parken können Sie direkt an der Hotelanlage oder in der Tiefgarage (kostenpflichtig).</p>
@@ -109,7 +109,7 @@
         <section>
             <div id="rooms" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Zimmer</h2>
-                <div class="row bg-body p-md-4 p-3">
+                <div class="row bg-yellow-light p-md-4 p-3 align-items-center">
                     <div class="col-lg-8 offset-lg-1">
                         <div id="slider1" class="slider">
                             <div class="slider-wrapper">
@@ -118,6 +118,7 @@
                                 <div class="slide"><img src="img/room3.jpg" alt="Slide 3"></div>
                                 <div class="slide"><img src="img/room4.jpg" alt="Slide 4"></div>
                                 <div class="slide"><img src="img/room5.jpg" alt="Slide 5"></div>
+                                <div class="slide"><img src="img/room6.jpg" alt="Slide 6"></div>
                             </div>
                             <div class="slider-controls">
                                 <button class="prevBtn">&#10094;</button>
@@ -129,6 +130,7 @@
                                 <div class="dot" onclick="slider1.currentSlide(3)"></div>
                                 <div class="dot" onclick="slider1.currentSlide(4)"></div>
                                 <div class="dot" onclick="slider1.currentSlide(5)"></div>
+                                <div class="dot" onclick="slider1.currentSlide(6)"></div>
                             </div>
                         </div>
                     </div>
@@ -210,7 +212,7 @@
         <section>
             <div id="beach" class="container my-2 image-wrapper">
                 <h2 class="shadows-into-light-regular">Strand</h2>
-                <div class="bg-yellow-light">
+                <div class="row bg-yellow-light p-md-4 p-3">
                     <div class="col-md-8 offset-md-2">
                         <div id="slider3" class="slider">
                             <div class="slider-wrapper">
@@ -339,7 +341,7 @@
                 </div>
 
                 <div class="row mx-5 p-3">
-                    <div class="col-sm-11 offset-sm-1">
+                    <div class="col-lg-11 offset-lg-1">
                         <h5>Haftungsausschluss</h5>
                         <p><strong>Haftung für Inhalte:</strong> Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.</p>
                         
