--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -23,9 +23,14 @@
   </head>
   <body>
     <header>
-        <div class="container-fluid bg-blue-light fixed-top logo-div">
-            <img class="img-fluid logo" src="img/logo.png" alt="">
-            <p class="shadows-into-light-regular">Ferienwohnungen in Misdroy</p>
+        <div class="container-fluid bg-blue-light fixed-top logo-div d-flex justify-content-between align-items-center px-3">
+            <div class="d-flex align-items-center">
+                <img class="img-fluid logo me-2" src="img/logo.png" alt="">
+                <p class="shadows-into-light-regular mb-0">Ferienwohnungen in Misdroy</p>
+            </div>
+            <a href="index-pl.html">
+                <img src="img/pl-flag.png" alt="Polska wersja" style="height: 32px;">
+            </a>
         </div>
         <nav class="navbar navbar-expand-md navbar-dark bg-blue fixed-top">   
             <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -305,7 +310,7 @@
                         <h5><strong>Kontakt:</strong></h5>
                         <ul class="contact-footer">
                             <li class="mb-3">
-                                <p class="mb-0"><strong>Geschäftsführer Harald Schmidt</strong></p>
+                                <p class="mb-0"><strong>Prezes Harald Schmidt</strong></p>
                                 <p class="mb-0">Mobil: +49 175 533 0364</p>
                             </li>
                             <li class="mb-3">
@@ -332,7 +337,7 @@
                     <div class="col-lg-4">
                         <h5><strong>Firmensitz:</strong></h5>
                         <p class="mb-0">Syld Haria Sp. z o.o.</p>
-                        <p class="mb-0">vertreten durch: Geschäftsführer Harald Schmidt</p>
+                        <p class="mb-0">vertreten durch: Prezes Harald Schmidt</p>
                         <p class="mb-0">ul. 1 Maja 38/39 bud. A</p>
                         <p class="mb-0">71-627 Szczecin</p>
                         <p class="mb-0">Polen</p>
