--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -23,13 +23,13 @@
   </head>
   <body>
     <header>
-        <div class="container-fluid bg-blue-light fixed-top logo-div d-flex justify-content-between align-items-center px-3">
-            <div class="d-flex align-items-center">
-                <img class="img-fluid logo me-2" src="img/logo.png" alt="">
-                <p class="shadows-into-light-regular mb-0">Ferienwohnungen in Misdroy</p>
-            </div>
-            <a href="index-pl.html">
-                <img src="img/pl-flag.png" alt="Polska wersja" style="height: 32px;">
+         <div class="container-fluid bg-blue-light fixed-top logo-div position-relative">
+            <img class="img-fluid logo" src="img/logo.png" alt="">
+            <p class="shadows-into-light-regular">Ferienwohnungen in Misdroy</p>
+
+            <!-- Flaga Polski -->
+            <a href="index-pl.html" class="polish-flag-link">
+                <img src="img/pl-flag.png" alt="Polska wersja" class="polish-flag">
             </a>
         </div>
         <nav class="navbar navbar-expand-md navbar-dark bg-blue fixed-top">   
