--- a/Tulip/index-pl.html
+++ b/Tulip/index-pl.html
@@ -22,12 +22,18 @@
 
   </head>
   <body>
-    <header>
-        <div class="container-fluid bg-blue-light fixed-top logo-div">
+    <header class="fixed-top bg-white shadow" style="z-index: 1030;">
+        <!-- logo-div -->
+        <div class="container-fluid bg-blue-light logo-div position-relative">
             <img class="img-fluid logo" src="img/logo.png" alt="">
             <p class="shadows-into-light-regular">Ferienwohnungen in Misdroy</p>
+
+            <!-- Flaga -->
+            <a href="index-de.html" class="polish-flag-link">
+                <img src="img/de-flag.png" alt="Niemiecka wersja" class="polish-flag">
+            </a>
         </div>
-        <nav class="navbar navbar-expand-md navbar-dark bg-blue fixed-top">   
+        <nav class="navbar navbar-expand-md navbar-dark bg-blue">  
             <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button> 
